Start of Node JS version

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@
 
 ## NodeJS
 /node_modules/
+/dist/
+
+## SQLite
+/data/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
