--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
   "homepage": "https://github.com/bartt/bookcaster#readme",
   "dependencies": {
     "@types/bookshelf": "^1.2.7",
-    "bookshelf": "^1.2.0",
-    "bookshelf-cascade-delete": "^2.0.1",
     "fastify": "^4.12.0",
     "knex": "^2.4.2",
     "music-metadata-browser": "^2.5.9",
+    "objection": "^3.0.1",
     "rss": "^1.2.2",
     "s3": "^4.4.0",
     "sqlite3": "^5.1.4"
