Test DB model out in /ping

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev:tsc": "tsc --project tsconfig.json --watch --outdir dist",
-    "dev:watch": "nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "dev:watch": "nodemon --loader ts-node/esm dist/index.js",
+    "start": "node --loader ts-node/esm dist/index.js"
   },
   "repository": {
     "type": "git",
