--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev:tsc": "tsc --project tsconfig.json --watch --outdir dist",
-    "dev:watch": "nodemon --loader ts-node/esm dist/index.js",
+    "dev:watch": "node -v && nodemon --loader ts-node/esm dist/index.js",
     "start": "node --loader ts-node/esm dist/index.js"
   },
   "repository": {
@@ -20,13 +20,13 @@
   },
   "homepage": "https://github.com/bartt/bookcaster#readme",
   "dependencies": {
-    "@types/bookshelf": "^1.2.7",
+    "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
     "knex": "^2.4.2",
     "music-metadata-browser": "^2.5.9",
     "objection": "^3.0.1",
     "rss": "^1.2.2",
-    "s3": "^4.4.0",
+    "s3": "^2.0.0",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
