--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "objection": "^3.0.1",
     "rss": "^1.2.2",
     "s3": "^2.0.0",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
