--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   },
   "homepage": "https://github.com/bartt/bookcaster#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.264.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
+    "image-data-uri": "^2.0.1",
+    "image-size": "^1.0.2",
     "knex": "^2.4.2",
     "music-metadata-browser": "^2.5.9",
     "objection": "^3.0.1",
     "rss": "^1.2.2",
-    "s3": "^2.0.0",
     "sqlite3": "^5.1.4",
     "ts-node": "^10.9.1"
   },
