--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "homepage": "https://github.com/bartt/bookcaster#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.264.0",
+    "@fastify/view": "^7.4.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
+    "handlebars": "^4.7.7",
     "image-data-uri": "^2.0.1",
     "image-size": "^1.0.2",
     "knex": "^2.4.2",
