--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "image-data-uri": "^2.0.1",
     "image-size": "^1.0.2",
     "knex": "^2.4.2",
-    "music-metadata-browser": "^2.5.9",
+    "music-metadata": "^8.1.3",
     "objection": "^3.0.1",
     "rss": "^1.2.2",
     "sqlite3": "^5.1.4",
