--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/bartt/bookcaster#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.264.0",
+    "@fastify/basic-auth": "^5.0.0",
     "@fastify/view": "^7.4.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
