--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.264.0",
     "@fastify/basic-auth": "^5.0.0",
+    "@fastify/static": "^6.8.0",
     "@fastify/view": "^7.4.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
