--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev:tsc": "tsc --project tsconfig.json --watch --outdir dist",
-    "dev:watch": "node -v && nodemon --loader ts-node/esm dist/index.js",
-    "start": "node --loader ts-node/esm index.js"
+    "dev:watch": "cp public/*.{css,js,png} dist/public && nodemon --loader ts-node/esm dist/index.js",
+    "start": "node --loader ts-node/esm dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/html-minifier": "^4.0.2",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
