--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "Turn audiobooks into podcasts",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
     "dev:tsc": "tsc --project tsconfig.json --watch --outdir dist",
     "dev:watch:public": "nodemon --exec 'cp -v public/*.{css,js,png} dist/public' --watch public --ext css,js,png",
-    "dev:watch:dist": "nodemon --loader ts-node/esm dist/index.js",
+    "dev:watch:dist": "nodemon --loader esm dist/main.js",
     "dev:prettier": "prettier --config .prettierrc './**/*.ts'",
     "dev:prettier:format": "prettier --config .prettierrc './**/*.ts' --write",
-    "dev:lint": "eslint . --fix-dry-run --ext .ts",
-    "start": "node --loader ts-node/esm dist/index.js"
+    "dev:lint": "eslint . --fix-dry-run",
+    "start": "node --loader esm dist/main.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "@fastify/static": "^6.8.0",
     "@fastify/view": "^7.4.1",
     "dotenv": "^16.0.3",
+    "esm": "^3.2.25",
     "fastify": "^4.12.0",
     "handlebars": "^4.7.7",
     "html-minifier": "^4.0.0",
@@ -37,8 +38,7 @@
     "knex": "^2.4.2",
     "music-metadata": "^8.1.3",
     "objection": "^3.0.1",
-    "sqlite3": "^5.1.4",
-    "ts-node": "^10.9.1"
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "@types/html-minifier": "^4.0.2",
