--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "esm": "^3.2.25",
     "fastify": "^4.12.0",
     "handlebars": "^4.7.7",
+    "html-entities": "^2.3.3",
     "html-minifier": "^4.0.0",
     "image-data-uri": "^2.0.1",
     "image-size": "^1.0.2",
