--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/main.js",
   "scripts": {
     "dev:tsc": "tsc --project tsconfig.json --watch --outdir dist",
-    "dev:watch:public": "nodemon --exec 'cp -v public/*.{css,js,png} dist/public' --watch public --ext css,js,png",
+    "dev:watch:public": "nodemon --exec 'bash -c \"cp -v public/*.{css,js,png} dist/public\"' --watch public --ext css,js,png",
     "dev:watch:dist": "nodemon --loader esm dist/main.js",
     "dev:prettier": "prettier --config .prettierrc './**/*.ts'",
     "dev:prettier:format": "prettier --config .prettierrc './**/*.ts' --write",
